# some_student_le

./: .replit  disassembled.py  main.py  publish.sh  replit.nix  update.py
some_student_le/: README.md  pyproject.toml
some_student_le/really_not_good/: __init__.py
some_student_le_PyPI/: README.md  pyproject.toml
some_student_le_PyPI/some_student_le/: __init__.py
some_student_le_PyPI/tests/: __init__.py
