[tool.poetry]
name = "some-student-le"
version = "1.0.1"
description = "really not good (by Dr Lo, my math teacher)"
authors = ["Taokyle <taokyle415@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
